# mcpoc

./: .mcp.json  CLAUDE.md  README.md  challenge.c
mcpoc/: README.md  pyproject.toml
mcpoc/src/mcpoc/: server.py
